fix header spacing. fix iframe width. add contact content

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -159,6 +159,9 @@ html, body
   max-width: 100%
   font-size: $font-size-tiny
 
+iframe 
+  max-width: 100% 
+
 // ******************************************************
 
 // HEADER
